# ml_course

./: .gitignore  README.md
.dvc/: config
0_all_in_one/: .env  .gitignore  README.md  docker-compose.yml
1_containerization/: Dockerfile  README.md  docker-compose.yml  requirements.txt  titanic-data-science-solutions.ipynb
1_conterization/: Dockerfile  requirements.txt
2_data_governance/: .gitignore  README.md  cleaning.py  cleaning.py.dvc  credentials.json  data_cleaning.py  dataset_57_hypothyroid.csv  dataset_57_hypothyroid.csv.dvc  dvc.yaml  encoding.py  encoding.py.dvc  metrics.json  params.yaml  requirements.txt  resampling.py  resampling.py.dvc  scaling.py  scaling.py.dvc  split.py  split.py.dvc  split_encoding_scaling.py  test.csv.dvc  train.csv.dvc  train.py  train.py.dvc
3_experiment_tracking/: .gitignore  Dockerfile.jupiter  Dockerfile.jupyter  Dockerfile.mlflow  README.md  Untitled.ipynb  docker-compose.yml  regr.ipynb  regr.py  requirements.txt
4_pipelines/: .gitignore  Dockerfile  README.md  (+3 more)
5_model_deployment/: .gitignore  Dockerfile  Dockerfile.api  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
5_model_deployment/dags/: batch_prediction_dag.py
5_model_deployment/data/: input.csv  output.csv
5_model_deployment/src/: app.py  batch_predict.py
5_model_deployment/src/toxicity_detection/: __init__.py  app.py  batch_predict.py  load_model.py
5_model_deployment/tests/: test_health_check.py  test_input.py
5_model_deployment/toxicity_detection.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
(+11 files in other folders)
